<?xml version="1.0" encoding="utf-8"?>
<!-- English string file. -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Main strings. -->
    <string name="appName">Kora</string>
    <string name="title">Kora</string>
    <string name="versionNumber">0.0.5</string>
    
    <!-- Common actions -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select">Select</string>
    <string name="choose">Choose</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="return_">Return</string>
    <string name="close">Close</string>
    
    <!-- Activity Strings -->
    <string name="welcomeActivity">Kora</string>
    <string name="controlActivity">Device selection</string>
    <string name="settingsActivity">Settings</string>
        <string name="usersActivity">Users</string>
        <string name="useProfilesActivity">Use profiles</string>
        <string name="deviceProfilesActivity">Device profiles</string>
    
    <!-- Welcome strings -->
    <string name="startButton">Start</string>
    <string name="settingsButton">Settings</string>
    <string name="about">About</string>
    <string name="autostartText1">will start on</string>
    <string name="autostartText2">seconds.</string>
    
        <!-- Information strings -->
    	<string name="version">Version</string>
    	<string name="scautProject">The Sc@ut Project</string>
    	<string name="author">Author</string>
    	<string name="projectSupervisor">Supervisor</string>
    	<string name="acknowledgements">Acknowledgments &amp; Credits</string>
        <string name="artwork">Artwork</string>
        <string name="artworkString">Main icon and background\nby Jeremy Todaro.\nSome original icons from\nOxygen Project.</string>
        <string name="codeParts">Code parts</string>
        <string name="codePartsString">ColorPickerDialog from\nGoogle API Demos.\nOriginal GridLayout from\nPhotoStream.</string>
    <!-- Settings strings -->
    <string name="user">User</string>
    <string name="useProfile">Use profile</string>
    <string name="deviceProfile">Device profile</string>
    <string name="usersTab">Users</string>
    <string name="useProfilesTab">Use profiles</string>
    <string name="deviceProfilesTab">Device profiles</string>
    
        <!-- Common strings -->
        <string name="addButton">Add</string>
        <string name="current">Current:</string>
        <string name="customs">Custom</string>
        <string name="defaults">Default</string>
        <string name="settingsError">SETTINGS ERROR. Please contact author.</string>
    
        <!-- Users strings -->
            <string name="addUser">Add user</string>
	        <!-- Add/Edit dialog -->
	        <string name="editUser">Edit user</string>
	        <string name="userPhoto">Photo</string>
	        <string name="name">Name</string>
	        <string name="school">School</string>
	        <string name="autoStart">Autostart</string>
	        <string name="seconds">seconds</string>
	        <string name="minimumTime">Minimum time is 5 seconds</string>
	        <string name="addUserOk">Added user</string>
            <string name="editUserOk">Success editing user</string>
	        <string name="existingUserFail">User already exists</string>
            <string name="emptyUserNameAndSchoolFail">Fields \"Name\" and \"School\" must be filled</string>
	        <!-- Deletion dialog -->
	        <string name="userDeletionQuestion">Are you sure you want to delete user</string>
            <string name="deleteUserOk">Success deleting user</string>
            <string name="deleteUserFail">Failed deleting user</string>
            <!-- Copy dialog -->
            <string name="copyUser">Copy user</string>
        
        <!-- Use profiles strings -->
            <string name="addUseProfile">Add use profile</string>
            <!-- Selection dialog -->
            <string name="chooseUseProfileFor">Choose for</string>
            
            <!-- Add/Edit dialog -->
            <string name="editUseProfile">Edit use profile</string>
	        <string name="interaction">Interaction</string>
	        <string name="visualization">Visualization</string>
	        <string name="feedback">Feedback</string>
	        <string name="soundVoice">Sound and voice</string>
	        <string name="addUseProfileOk">Added use profile</string>
            <string name="editUseProfileOk">Success editing use profile</string>
            <string name="existingUseProfileFail">Use profile already exists</string>
            <string name="emptyUseProfileNameFail">Field "Name" must be filled</string>
	            <!-- Interaction -->
	            <string name="mainInteraction">Main interaction</string>
	                <string name="touchInteraction">Touch interaction</string>
	                    <string name="multitouchInteraction">Multitouch</string>
	                    <string name="pressAndDragInteraction">Touch and drag</string>
	                    <string name="simpleTouchInteraction">Simple touch</string>
	                <string name="scanInteraction">Scan</string>
	                    <string name="simpleScan">Elementwise</string>
	                    <string name="rowColumnScan">Row-column</string>
                            <string name="scanTime">Interval (seg)</string>
                <string name="paging">Paging</string>
                    <string name="standardPaging">Standard</string>
                    <string name="automaticPaging">Automatic</string>
                    <string name="lastButton">Last button</string>
	            <string name="voiceInteraction">Voice interaction</string>
	            <!-- Visualization -->
	            <string name="lookAndFeel">Look and feel</string>
	                <string name="defaultLAF">Default</string>
	                <string name="plainColor">Plain color</string>
	                <string name="differentPlainColor">Different colors</string>
	                <string name="highContrastColor">High contrast</string>
	                <string name="blackAndWhite">Black and white</string>
	            <string name="layout">Layout</string>
	                <string name="columns">Columns</string>
	                <string name="rows">Rows</string>
                    <string name="margin">Margin</string>
	                <string name="vertical">Vertical</string>
                    <string name="horizontal">Horizontal</string>
                    <string name="bothOrientations">Both orientations</string>
	            <string name="text">Text</string>
	                <string name="textShow">Show text</string>
	                <string name="textSize">Size</string>
	                    <string name="textSmall">Small</string>
	                    <string name="textMedium">Medium</string>
	                    <string name="textLarge">Large</string>
	                <string name="textTypography">Typography</string>
	                    <string name="sans">Sans font</string>
	                    <string name="calligraphic">Calligraphic</string>
	                    <string name="caps">Caps</string>
	                <string name="textColor">Color</string>
		                <string name="textBlack">Black</string>
		                <string name="textWhite">White</string>
		                <string name="textCustomColor">Custom color</string>
	            <string name="imagesAndIcons">Images and icons</string>
	                <string name="icon">Icon</string>
	                <string name="highContrastIcon">High contrast icon</string>
	                <string name="photoIcon">Photo</string>
	                <string name="animation">Animation</string>
                    <string name="customImage">Use custom image when possible</string>
	            <!-- Feedback -->
	            <string name="vibration">Vibration</string>
	            <string name="confirmation">Confirmation</string>
	            <string name="highlight">Highlight</string>
	                <string name="noHighlight">None</string>
	                <string name="standardHighlight">Standard</string>
	                <string name="zoomIn">Zoom in</string>
	                <string name="increaseBrightness">Increase brightness</string>
	            <string name="highlightBorder">Highlight border</string>
	            <!-- Sound & Voice -->
	            <string name="soundMode">Sound mode</string>
	            <string name="soundEvents">Sound events</string>
	            <string name="noSound">No sound</string>
	            <string name="voiceOptions">Voice options</string>
	            <string name="simpleSounds">Simple sounds</string>
	                <string name="onItemSelection">When an item is selected</string>
	                <string name="onAction">When an action is done</string>
	            <string name="voice">Voice</string>
	                <string name="defaultVoice">Default voice</string>
	                <string name="customVoice">Custom voice</string>
                
            <!-- Deletion dialog -->
            <string name="useProfileDeletionQuestion">Are you sure you want to delete use profile</string>
            <string name="deleteUseProfileOk">Success deleting use profile</string>
            <string name="deleteUseProfileFail">Failed deleting use profile</string>
            <string name="deleteUseProfileFailUsed">Can\'t delete use profile: it\'s being used</string>
            
            <!--  Copy dialog -->
            <string name="copyUseProfile">Copy use profile</string>
            
            <!-- Choose toast -->
            <string name="nowUses">now uses</string>
        
        <!-- Device profiles strings -->
        <string name="addDeviceProfile">Add device profile</string>
        
            <!--  nothing yet -->
            
    <!-- Device strings -->
    <string name="light">Light</string>
    <string name="sunblind">Sunblind</string>
    <string name="door">Door</string>
    <string name="heating">Heating</string>
    <string name="airConditioner">Air conditioner</string>
    <string name="music">Music</string>
    <string name="boiler">Boiler</string>
    
    <!-- Device actions -->
    <string name="turnOn">Turn on</string>
    <string name="turnOff">Turn off</string>
    <string name="raise">Raise</string>
    <!-- Añadir resto de verbos aquí -->
    
    <!-- Please, translate this into english. I'll translate tags later.
         Cosas como: "subido una persiana", "bajado una persiana", "subido una persiana del todo", "puesto agua a calentar"
         "subido la temperatura", etc. Acciones básicas sobre los dispositivos de arriba. -->
    <!-- Feedback strings -->
    <string name="nice">Nice!</string>
    <string name="youHave">You have</string>
    <string name="done">done</string>
    <string name="turnedOnLight">turned on light</string>
    <string name="turnedOffLight">turned off light</string>
    <!-- Continuar aquí -->
</resources>
