<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:gskbyte="http://schemas.android.com/apk/res/org.gskbyte.kora"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content">
    
    <include android:id="@+id/okCancelBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/ok_cancel_bar"/>
    
    <ScrollView
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_above="@id/okCancelBar"
        android:layout_alignParentTop="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="250dip"
        android:layout_marginLeft="10dip">
        
        <TextView
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"
            style="?android:attr/listSeparatorTextViewStyle"
            
            android:text="@string/lookAndFeel"/>
        
            <RadioGroup android:id="@+id/lookAndFeelRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/defaultLAFRadio"
                android:orientation="vertical"
                android:paddingLeft="5dip">
                <RadioButton android:id="@+id/defaultLAFRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/defaultLAF"/>
                
                <RadioButton android:id="@+id/plainRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/plainColor"/>
                
			    <org.gskbyte.kora.customViews.ColorButton android:id="@+id/backgroundColorButton"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="30dip"
                    android:visibility="gone"
                    
			        android:minWidth="50dip"/>
        
                <RadioButton android:id="@+id/differentPlainRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/differentPlainColor"/>
                    
                <RadioButton android:id="@+id/highContrastRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/highContrastColor"/>
                
                <RadioButton android:id="@+id/blackAndWhiteRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/blackAndWhite"/>
            </RadioGroup>
        
        <TextView
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"
            style="?android:attr/listSeparatorTextViewStyle"
            
            android:text="@string/layout"/>
            
            <org.gskbyte.kora.customViews.koraSeekBar.KoraIntegerSeekBar
                android:id="@+id/rowsSeekBar"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                gskbyte:title="@string/rows"
                gskbyte:minimum="1"
                gskbyte:maximum="4"/>
            <org.gskbyte.kora.customViews.koraSeekBar.KoraIntegerSeekBar
                android:id="@+id/columnsSeekBar"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                gskbyte:title="@string/columns"
                gskbyte:minimum="1"
                gskbyte:maximum="4"/>
                
            <org.gskbyte.kora.customViews.koraSeekBar.KoraArraySeekBar
                android:id="@+id/marginSeekBar"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                gskbyte:title="@string/margin"
                gskbyte:array_id="@array/threeSizes"/>
                
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/bothOrientatonsRadio"
                android:orientation="vertical"
                android:paddingLeft="5dip">
          
                <RadioButton android:id="@+id/bothOrientationsRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/bothOrientations"/>
          
                <RadioButton android:id="@+id/verticalRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/vertical"/>
                  
                <RadioButton android:id="@+id/horizontalRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/horizontal"/>
            </RadioGroup>
        <TextView
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"
            style="?android:attr/listSeparatorTextViewStyle"
            
            android:text="@string/text"/>
            
	        <CheckBox android:id="@+id/showTextCheckBox"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            
	            android:checked="true"
	            android:text="@string/textShow"/>
	            
            <LinearLayout android:id="@+id/textLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dip">
	                        
                <org.gskbyte.kora.customViews.koraSeekBar.KoraArraySeekBar
                    android:id="@+id/textSizeSeekBar"
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content"
                    gskbyte:title="@string/textSize"
                    gskbyte:array_id="@array/threeSizes"/>
                
                <TextView
		            android:layout_width="fill_parent"  
		            android:layout_height="wrap_content"
		            android:textStyle="bold"
		            
		            android:text="@string/textTypography"/>
		            
		            <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkedButton="@+id/sansRadio"
                        android:orientation="vertical"
                        android:paddingLeft="5dip">
                  
	                    <RadioButton android:id="@+id/sansRadio"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        
	                        android:text="@string/sans"/>
                  
		                <RadioButton android:id="@+id/masalleraRadio"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    
                            android:text="Masallera"/>
	  	                  
		                <RadioButton android:id="@+id/monofurRadio"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    
		                    android:text="Monofur"/>
                    </RadioGroup>
                    
                <CheckBox android:id="@+id/capsCheckBox"
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                
	                android:checked="true"
	                android:text="@string/caps"/>
                    
                <TextView
                    android:layout_width="fill_parent"  
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    
                    android:text="@string/textColor"/>
                    
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkedButton="@+id/textBlackRadio"
                        android:orientation="vertical"
                        android:paddingLeft="5dip">
                        
                        <RadioButton android:id="@+id/textBlackRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            
                            android:text="@string/textBlack"/>
                            
                       <RadioButton android:id="@+id/textWhiteRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            
                            android:text="@string/textWhite"/>
                        
                        <RadioButton android:id="@+id/textCustomColorRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            
                            android:text="@string/textCustomColor"/>
                        
                        <org.gskbyte.kora.customViews.ColorButton android:id="@+id/textColorButton"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="30dip"
		                    android:visibility="gone"
		                    
		                    android:minWidth="50dip"/>
                    </RadioGroup>
            
	            <TextView
		            android:layout_width="fill_parent"  
		            android:layout_height="wrap_content"
		            style="?android:attr/listSeparatorTextViewStyle"
		            
		            android:text="@string/imagesAndIcons"/>
	            
	                <RadioGroup
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:checkedButton="@+id/iconRadio"
	                    android:orientation="vertical"
	                    android:paddingLeft="5dip">
	                    
	                    <RadioButton android:id="@+id/iconRadio"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        
	                        android:text="@string/icon"/>
	                        
	                   <RadioButton android:id="@+id/iconHighContrastRadio"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        
	                        android:text="@string/highContrastIcon"/>
	                    
                       <RadioButton android:id="@+id/iconBlackWhiteRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            
                            android:text="@string/blackAndWhite"/>
                            
	                    <RadioButton android:id="@+id/iconPhotoRadio"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        
	                        android:text="@string/photoIcon"/>
	              
	                    <RadioButton android:id="@+id/iconAnimationRadio"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        
	                        android:text="@string/animation"/>
	                </RadioGroup>
	                
	                <CheckBox android:id="@+id/customImageCheckBox"
	                    android:layout_height="wrap_content"
	                    android:layout_width="wrap_content"
	                    
	                    android:checked="true"
	                    android:text="@string/customImage"/>
            </LinearLayout>
            
	</LinearLayout>
	</ScrollView>
	
</RelativeLayout>