<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
	<TableLayout 
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:stretchColumns="1"
         android:padding="5dip">
	       
	     <TableRow>
	        <ImageButton android:id="@+id/photoButton"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
	            android:scaleType="fitXY"
			    
			    android:src="@drawable/icon_user_big"/>
			
			<LinearLayout android:orientation="vertical"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
			
		        <EditText android:id="@+id/userNameEdit"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:maxLength="16"
					android:singleLine="true"
					
					android:hint="@string/name"/>
			
				<EditText android:id="@+id/userSchoolEdit"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:maxLength="16"
					android:singleLine="true"
					
					android:hint="@string/school"/>
					
		   </LinearLayout>
	    </TableRow>
	    
	    <TableRow>
	        <TextView android:id="@+id/useProfileText" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				
				android:text="@string/useProfile"/>
		
			<Spinner android:id="@+id/useProfileSpinner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
	    </TableRow>
	       
	    <TableRow>
	        <TextView android:id="@+id/deviceProfileText" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dip"
				
				android:text="@string/deviceProfile" />
		
			<Spinner android:id="@+id/deviceProfileSpinner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
	    </TableRow>
	       
	    <TableRow>
	        <CheckBox android:id="@+id/autoStartCheckBox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				
				android:textSize="15sp"
				android:text="@string/autoStart"/>
			
			<EditText android:id="@+id/autoStartEdit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				
				android:hint="@string/seconds"
				android:enabled="false"
				
				android:singleLine="true"
				android:numeric="integer"/>
	     </TableRow>
	 </TableLayout>
	 <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@android:style/ButtonBar">
	        <Button android:id="@+id/acceptButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
                android:width="0px"
                android:layout_weight="0.5"
	            
	            android:drawableLeft="@drawable/action_ok"
	            android:text="@string/ok"/>
	            
	        <Button android:id="@+id/cancelButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
                android:width="0px"
                android:layout_weight="0.5"
	            
	            android:drawableLeft="@drawable/action_cancel"
	            android:text="@string/cancel"/>
	</LinearLayout>
</LinearLayout>